# guildwars2-autocata

./: CMakeLists.txt  README.md  cata.sh  main.cpp
